fix(card): sections gaps

--- a/src/components/card/themes/shared/header/card.header.indigo.scss
+++ b/src/components/card/themes/shared/header/card.header.indigo.scss
@@ -4,6 +4,10 @@
     ::slotted(igc-avatar) {
         --ig-size: 3;
     }
+
+    [part='header'] {
+        gap: rem(2px);
+    }
 }
 
 ::slotted([slot='subtitle']) {
